2008-03-19  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.2

	* configure.ac: Add --without-freetype option

2008-03-17 21:01-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/gsc/GSStreamContext.m: Add back implementation for
	DPSrectclip::::.

2008-03-15 19:35-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/gsc/GSStreamContext.m: Correct call in NSDrawBitmap::::...
	to add NSHeight, not NSWidth to the y coordinate if it's flipped.

2008-03-15 17:48-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/gsc/GSStreamContext.m: Added implementation for GSDrawImage.

2008-03-13 19:37-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/gsc/GSStreamContext.m: Remove implementation of 
	DPSrectclip:::: since it was causing issues with printing.  Will
	investigate further to see if this is the correct fix.

2008-03-09 Fred Kiefer <FredKiefer@gmx.de>

        * Source/art/ARTContext.m (-GSDrawImage:): Remove this hack again.
	* Source/art/image.m (_image_get_color_rgb_cmyk_gray,
	_image_get_color_rgb_8):  Make sure the image gets unpremultied in
	all cases.

2008-03-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source\win32\WIN32Server.m (-exwindowStyleForGSStyle:): 
	New method used in window::::, stylewindow: and styleoffsets:::::.
	* Headers\win32\WIN32Server.h,
	* Source\win32\WIN32Server.m (-resetForGSWindowStyle:w32Style:):
	Remove method.
	
2008-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers\win32\WIN32Server.h: make 'orderedIn' and 'level' 32bit
	fields at start of structure so that we can easily use GetWindowLong()
	and SetWindowLong() with them.
	* Source\win32\w32_movesize.m:
	* Source\win32\WIN32Server.m:
	Change to accessing 'orderedIn' and 'level' directly using 
	GetWindowLong() and SetWindowLong() so that code works when windows
	are owned by another app.

2008-03-06 Richard Frith-Macdonald <rfm@gnu.org>

	* Source\win32\w32_movesize.m: Bypass all existing code to send a