@@ -42,16 +42,22 @@
   _cacheSize = size;
   if (_cachedSizes)
     {
-      free(_cachedSizes);
+      objc_free(_cachedSizes);
     }
   if (_cachedGlyphs)
     {
-      free(_cachedGlyphs);
+      objc_free(_cachedGlyphs);
     }
-  _cachedSizes = malloc(sizeof(NSSize) * size);
-  memset(_cachedSizes, 0, sizeof(NSSize) * size);
-  _cachedGlyphs = malloc(sizeof(unsigned int) * size);
-  memset(_cachedGlyphs, 0, sizeof(unsigned int) * size);
+  _cachedSizes = objc_malloc(sizeof(NSSize) * size);
+  if (_cachedSizes)
+    {
+      memset(_cachedSizes, 0, sizeof(NSSize) * size);
+    }
+  _cachedGlyphs = objc_malloc(sizeof(unsigned int) * size);
+  if (_cachedGlyphs)
+    {
+      memset(_cachedGlyphs, 0, sizeof(unsigned int) * size);
+    }
 }
 
 - (BOOL) setupAttributes
@@ -62,16 +68,13 @@
   cairo_matrix_t ctm;
   cairo_font_options_t *options;
 
-  /* do not forget to check for font specific
-   * cache size from face info FIXME FIXME
-   */
   ASSIGN(_faceInfo, [CairoFontEnumerator fontWithName: fontName]);
   if (!_faceInfo)
     {
       return NO;
     }
 
-  _cachedSizes = NULL;
+  // check for font specific cache size from face info
   [self setCacheSize: [_faceInfo cacheSize]];
 
   /* setting GSFontInfo:
@@ -91,6 +94,7 @@
   cairo_matrix_init(&font_matrix, matrix[0], matrix[1], matrix[2],
                     matrix[3], matrix[4], matrix[5]);
   cairo_matrix_init_identity(&ctm);
+
   // FIXME: Should get default font options from somewhere
   options = cairo_font_options_create();
   face = [_faceInfo fontFace];
@@ -98,6 +102,7 @@
     {
       return NO;
     }
+
   _scaled = cairo_scaled_font_create(face, &font_matrix, &ctm, options);
   cairo_font_options_destroy(options);
   if (!_scaled)
@@ -122,8 +127,9 @@
                  matrix: (const float *)fmatrix 
              screenFont: (BOOL)p_screenFont
 {
-  //NSLog(@"initWithFontName %@",name);
-  [super init];
+  self = [super init];
+  if (!self)
+    return nil;
 
   _screenFont = p_screenFont;
   fontName = [name copy];
@@ -155,8 +161,10 @@
     {
       cairo_scaled_font_destroy(_scaled);
     }
-  free(_cachedSizes);
-  free(_cachedGlyphs);
+  if (_cachedSizes)
+    objc_free(_cachedSizes);
+  if (_cachedGlyphs)
+    objc_free(_cachedGlyphs);
   [super dealloc];
 }
 
@@ -200,21 +208,30 @@ BOOL _cairo_extents_for_NSGlyph(cairo_scaled_font_t *scaled_font, NSGlyph glyph,
 - (NSSize) advancementForGlyph: (NSGlyph)glyph
 {
   cairo_text_extents_t ctext;
-  int entry;
 
-  entry = glyph % _cacheSize;
-
-  if (_cachedGlyphs[entry] == glyph)
+  if (_cachedSizes)
     {
-      return _cachedSizes[entry];
+      int entry = glyph % _cacheSize;
+
+      if (_cachedGlyphs[entry] == glyph)
+        {
+          return _cachedSizes[entry];
+        }
+      
+      if (_cairo_extents_for_NSGlyph(_scaled, glyph, &ctext))
+        {
+          _cachedGlyphs[entry] = glyph;
+          _cachedSizes[entry] = NSMakeSize(ctext.x_advance, ctext.y_advance);
+          
+          return _cachedSizes[entry];
+        }
     }
-
-  if (_cairo_extents_for_NSGlyph(_scaled, glyph, &ctext))
+  else
     {
-      _cachedGlyphs[entry] = glyph;
-      _cachedSizes[entry] = NSMakeSize(ctext.x_advance, ctext.y_advance);
-
-      return _cachedSizes[entry];
+      if (_cairo_extents_for_NSGlyph(_scaled, glyph, &ctext))
+        {
+          return NSMakeSize(ctext.x_advance, ctext.y_advance);
+        }
     }
 
   return NSZeroSize;
@@ -294,24 +311,60 @@ BOOL _cairo_extents_for_NSGlyph(cairo_scaled_font_t *scaled_font, NSGlyph glyph,
     }
 
   cdata = objc_malloc(sizeof(char) * 4 * ix * iy);
+  if (!cdata)
+    {
+      NSLog(@"Could not allocate drawing space for glyphs");
+      return;
+    }
+
   isurface = cairo_image_surface_create_for_data(cdata, format, ix, iy, 4*ix);
   status = cairo_surface_status(isurface);
   if (status != CAIRO_STATUS_SUCCESS)
     {
+      NSLog(@"Error while creating surface: %s", 
+            cairo_status_to_string(status));
       cairo_surface_destroy(isurface);
       objc_free(cdata);
       return;
     }
  
   ct = cairo_create(isurface);
+  if (cairo_status(ct) != CAIRO_STATUS_SUCCESS)
+    {
+      NSLog(@"Error while creating context: %s", 
+            cairo_status_to_string(cairo_status(ct)));
+      cairo_destroy(ct);
+      cairo_surface_destroy(isurface);
+      objc_free(cdata);
+      return;
+    }
   
   cairo_matrix_init(&font_matrix, matrix[0], matrix[1], matrix[2],
                     matrix[3], matrix[4], matrix[5]);
   cairo_set_font_matrix(ct, &font_matrix);
+  if (cairo_status(ct) != CAIRO_STATUS_SUCCESS)
+    {
+      NSLog(@"Error while setting font matrix: %s", 
+            cairo_status_to_string(cairo_status(ct)));
+      cairo_destroy(ct);
+      cairo_surface_destroy(isurface);
+      objc_free(cdata);
+      return;
+    }
+
+  cairo_set_font_face(ct, [_faceInfo fontFace]);
+  if (cairo_status(ct) != CAIRO_STATUS_SUCCESS)
+    {
+      NSLog(@"Error while setting font face: %s", 
+            cairo_status_to_string(cairo_status(ct)));
+      cairo_destroy(ct);
+      cairo_surface_destroy(isurface);
+      objc_free(cdata);
+      return;
+    }
 
   cairo_text_path(ct, str);
-  status = cairo_status(ct);
-  if (status == CAIRO_STATUS_SUCCESS)
+  if (cairo_status(ct) == CAIRO_STATUS_SUCCESS)
      {
       cairo_path_t *cpath;
       cairo_path_data_t *data;
@@ -381,6 +434,7 @@ BOOL _cairo_extents_for_NSGlyph(cairo_scaled_font_t *scaled_font, NSGlyph glyph,
             cairo_status_to_string(cairo_status(ct)));
       return;
     }
+
   cairo_set_font_face(ct, [_faceInfo fontFace]);
   if (cairo_status(ct) != CAIRO_STATUS_SUCCESS)
     {
